# ThrillerFlow

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  examples.yml  test.yml
examples/: Cargo.toml  access.rs  engine.rs  gemm.rs  gemm_gen.rs  global_block.rs  rf_block.rs  shared_block.rs  topo_sort.rs
examples/gemm/: gemm_codegen.rs  global_block.rs  rf_block.rs  shared_block.rs
examples/graph/: topo_sort.rs
examples/loop/: multiloops.rs
examples/ops/: gemm.rs
scripts/: run_examples.sh
src/: access.rs  buffer.rs  error.rs  id.rs  lib.rs
src/dataflow/: block.rs  edge.rs  graph.rs  mod.rs  node.rs
src/engine/: mod.rs
src/task/: compute.rs  copy.rs  mod.rs
src/task/compute/: gemm.rs
src/var/: iteration.rs  mod.rs  regular.rs
tests/: Cargo.toml  block.rs  id.rs  shape.rs
thriller-bindings/: .gitignore  Cargo.toml  Makefile
thriller-bindings/examples/b2b_gemm/: b2b_gemm.py  context.py
thriller-bindings/examples/gemm/: gemm_g2r.py  reg.py  whole_gemm.py
thriller-bindings/pythriller/: __init__.py  buffer.py  context.py
thriller-bindings/src/: access.rs  block.rs  buffer.rs  dtype.rs  graph.rs  lib.rs  op.rs  var.rs
thriller-bindings/tests/: context.py  test_bindings.py
thriller-bindings/tests/pass/: allocate_edge.py  allocate_var.py
thriller-core/: Cargo.toml
thriller-core/src/: access.rs  buffer.rs  dtype.rs  error.rs  id.rs  lib.rs  log.rs  shape.rs
thriller-core/src/dataflow/: block.rs  edge.rs  graph.rs  loop_analysis.rs  mod.rs  node.rs  (+1 more)
thriller-kernels/: Cargo.toml
thriller-kernels/src/: copy.rs  layout.rs  lib.rs  memory.rs
thriller-utils/: Cargo.toml
thriller-utils/src/: buf.rs  gemm.rs  lib.rs
(+16 files in other folders)
