[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"


[dev-dependencies]
thriller_core = { path = "../thriller-core" }
thriller_utils = { path = "../thriller-utils" }

[[example]]
name = "topo_sort"
path = "graph/topo_sort.rs"

[[example]]
name = "gemm"
path = "ops/gemm.rs"
